# new_project_0126

C++/: testing_0127.cpp
Client/: CMakeLists.txt  game_client  lv_conf.h  main.c
Client/game/: board_view.c  board_view.h  chess_data.h  chess_logic.c  game_config.h
Client/lv_drivers/: Makefile  cmake_install.cmake
Client/lvgl/: Makefile  cmake_install.cmake
Client/network/: network_client.c  network_client.h
Client/ui_generated/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.c  ui_events.h  ui_helpers.c  ui_helpers.h
Client/ui_generated/components/: ui_comp_hook.c
Client/ui_generated/images/: ui_img_arrow_png.c  ui_img_board_png.c
Client/ui_generated/screens/: ui_ScreenGame.c  ui_ScreenLobby.c  ui_ScreenLogin.c  ui_ScreenLogin1.c  ui_ScreenRegister.c  ui_ScreenRoom.c
Common/: game_protocol.h
Lvgl_project_files/: chess.sll  chess.spj  chess_events.py
Server/: game_server  room_manager.c  server_data.h  server_main.c  user_manager.c  users.txt
